--- a/src/main/resources/view/workspace.fxml
+++ b/src/main/resources/view/workspace.fxml
@@ -129,6 +129,82 @@
                         </AnchorPane>
                     </content>
                 </Tab>
+            <Tab text="Tilesety">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane layoutX="316.0" layoutY="148.0" prefHeight="691.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columnConstraints>
+                              <ColumnConstraints hgrow="ALWAYS" />
+                            <ColumnConstraints fillWidth="false" hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="ALWAYS" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints fillHeight="false" maxHeight="341.0" minHeight="10.0" prefHeight="39.0" vgrow="NEVER" />
+                            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="528.0" prefHeight="578.0" vgrow="ALWAYS" />
+                              <RowConstraints fillHeight="false" maxHeight="652.0" minHeight="10.0" prefHeight="36.0" vgrow="NEVER" />
+                              <RowConstraints fillHeight="false" maxHeight="60.0" minHeight="10.0" prefHeight="40.0" vgrow="NEVER" />
+                          </rowConstraints>
+                           <children>
+                              <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Dostępne tilesety" textAlignment="CENTER">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Tilesety w zestawie" textAlignment="CENTER" GridPane.columnIndex="2">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Button fx:id="tilesetButtonOpenFolder" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Otwórz folder z tilesetami" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <ListView fx:id="tilesetListLocal" prefHeight="200.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </ListView>
+                              <ListView fx:id="tilesetListBundle" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </ListView>
+                              <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <center>
+                                    <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="80.0" BorderPane.alignment="CENTER">
+                                       <children>
+                                          <Button fx:id="tilesetButtonToLocal" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="&lt;--">
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" />
+                                             </VBox.margin>
+                                          </Button>
+                                          <Button fx:id="tilesetButtonToBundle" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="--&gt;" />
+                                       </children>
+                                    </VBox>
+                                 </center>
+                              </BorderPane>
+                              <Button fx:id="tilesetButtonReload" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Przeładuj tilesety" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin></Button>
+                              <Button fx:id="tilesetButtonUpdateBundle" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Zaaktualizuj tilesety w zestawie" GridPane.rowIndex="3">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button fx:id="tilesetButtonUpdateLocal" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Pobierz wszystkie tilesety z zestawu" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                 <GridPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
                 <Tab fx:id="tabMapEditor" text="Edytor map">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -176,7 +252,7 @@
                                                         </MenuItem>
                                                         <SeparatorMenuItem mnemonicParsing="false" />
                                                         <MenuItem fx:id="menuEditMap" mnemonicParsing="false" text="Edytuj informacje o mapie" />
-                                          <MenuItem fx:id="menuEditMapMetadata" mnemonicParsing="false" text="Edytuj dane mapy" >
+                                          <MenuItem fx:id="menuEditMapMetadata" mnemonicParsing="false" text="Edytuj dane mapy">
                                               <accelerator>
                                                   <KeyCodeCombination alt="UP" code="D" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                                               </accelerator>
