--- a/src/main/resources/view/workspace.fxml
+++ b/src/main/resources/view/workspace.fxml
@@ -5,28 +5,8 @@
 <?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.input.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.margoj.editor.gui.controllers.WorkspaceController">
     <children>
@@ -91,7 +71,7 @@
                                                             <center>
                                                                 <AnchorPane>
                                                                     <BorderPane.margin>
-                                                                        <Insets bottom="10.0" />
+                                                                        <Insets />
                                                                     </BorderPane.margin>
                                                                     <children>
                                                                         <VBox prefHeight="636.0" prefWidth="619.0" spacing="7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -100,6 +80,8 @@
                                                                                 <Button fx:id="btnResourceLoadFromFile" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="50.0" text="Załaduj zasoby z pliku" />
                                                                                 <Button fx:id="btnResourceSaveToFile" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="50.0" text="Zapisz aktualny zasoby do pliku" />
                                                                                 <Button fx:id="btnResourceSaveAs" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="50.0" text="Zapisz aktualne zasoby jako..." />
+                                                            <Label text="Ostatnio uzywane:" />
+                                                            <ListView fx:id="listBundlesLastUsed" maxHeight="1.7976931348623157E308" prefWidth="406.0" VBox.vgrow="ALWAYS" />
                                                                             </children>
                                                                         </VBox>
                                                                     </children>
@@ -114,11 +96,23 @@
                                             <children>
                                                 <TitledPane collapsible="false" layoutX="68.0" layoutY="110.0" prefHeight="691.0" prefWidth="426.0" text="Podgląd aktualnego zasobu" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                     <content>
-                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                                                            <children>
-                                                                <ListView fx:id="listResourceView" layoutX="37.0" layoutY="91.0" prefHeight="665.0" prefWidth="424.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                                            </children>
-                                                        </AnchorPane>
+                                          <GridPane>
+                                             <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                             </columnConstraints>
+                                             <rowConstraints>
+                                                <RowConstraints maxHeight="1.7976931348623157E308" vgrow="ALWAYS" />
+                                                <RowConstraints fillHeight="false" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" vgrow="NEVER" />
+                                             </rowConstraints>
+                                             <children>
+                                                              <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                                                                  <children>
+                                                                      <ListView fx:id="listResourceView" layoutX="37.0" layoutY="91.0" prefHeight="593.0" prefWidth="404.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                                  </children>
+                                                              </AnchorPane>
+                                                <TextField fx:id="fieldResourceSearch" promptText="Szukaj" GridPane.rowIndex="1" />
+                                             </children>
+                                          </GridPane>
                                                     </content>
                                                 </TitledPane>
                                             </children>
