--- a/src/main/resources/view/dialog/map/edit.fxml
+++ b/src/main/resources/view/dialog/map/edit.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.margoj.editor.gui.controllers.dialog.GatewayObjectDialog">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="194.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.margoj.editor.gui.controllers.dialog.map.EditMapDialogController">
     <children>
         <GridPane prefHeight="200.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -27,13 +27,13 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="48.0" text="Mapa" />
-                <TextField fx:id="fieldGatewayTargetName" prefHeight="25.0" prefWidth="290.0" GridPane.columnIndex="1" />
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="60.0" text="X" GridPane.rowIndex="1" />
-                <TextField fx:id="fieldGatewayTargetX" prefHeight="25.0" prefWidth="99.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="60.0" text="Y" GridPane.rowIndex="2" />
-                <TextField fx:id="fieldGatewayTargetY" prefHeight="25.0" prefWidth="99.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <Button fx:id="buttonGatewayConfirm" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="25.0" prefWidth="369.0" text="Zatwierdź" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="48.0" text="Nazwa" />
+                <TextField fx:id="fieldMapName" prefHeight="25.0" prefWidth="290.0" GridPane.columnIndex="1" />
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="60.0" text="Szerokość" GridPane.rowIndex="1" />
+                <TextField fx:id="fieldMapWidth" prefHeight="25.0" prefWidth="99.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button fx:id="buttonMapConfirm" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="25.0" prefWidth="369.0" text="Zatwierdź" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="60.0" text="Wysokość" GridPane.rowIndex="2" />
+                <TextField fx:id="fieldMapHeight" prefHeight="25.0" prefWidth="99.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </children>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
